<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#41004D"
    tools:context="com.example.shrey.languageapp.MainActivity">

    <TextView
        android:id="@+id/phrases"
        style="@style/CategoryStyle"
        android:background="@color/phrases"
        android:text="@string/phrases"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numbers"
        style="@style/CategoryStyle"
        android:background="@color/numbers"
        android:text="@string/numbers"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phrases" />

    <TextView
        android:id="@+id/colors"
        style="@style/CategoryStyle"
        android:background="@color/colors"
        android:text="@string/colors"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numbers" />

    <TextView
        android:id="@+id/food"
        style="@style/CategoryStyle"
        android:background="@color/food"
        android:text="@string/food"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/colors" />

    <TextView
        android:id="@+id/googleTranslate"
        style="@style/CategoryStyle"
        android:background="@color/googleTranslate"
        android:text="@string/googleTranslate"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/food" />

</android.support.constraint.ConstraintLayout>
